Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,7 +74,7 @@ stages:
         echo "Running Snyk security scan"
         npm install -g snyk 
       displayName: 'Run Snyk Scan'
-      workingDirectory: $(System.DefaultWorkingDirectory)/synkscan
+      workingDirectory: $(System.DefaultWorkingDirectory)/
     
    
 # Step 3: Approval to proceed to the testing environment
