--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ stages:
     - task: PublishBuildArtifacts@1
       displayName: publish Artifacts
       inputs:
-        PathtoPublish: '$(Build.ArtifacStagingDirectory'
+        PathtoPublish: '$(Build.ArtifacStagingDirectory)'
         ArtifactName: drop
         publishLocation: Container
     
