Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,8 +56,8 @@ stages:
       displayName: 'Download Build Artifacts'
       inputs:
         buildType: specific
-        project: 'projectname'
-        pipeline: 'ft-demo'
+        project: 'ft-demo'
+        pipeline: 'KGFADOAdmin/frontend_mothership'
         artifactName: 'myapp'
         downloadPath: '$(Build.ArtifactsDirectory)'
     
