Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,6 +57,7 @@ stages:
       inputs:
         buildType: specific
         project: 'ft-demo'
+        pipeline: 'pipelineName or PipelineID'
         artifactName: 'myapp'
         downloadPath: '$(Build.ArtifactsDirectory)'
     
