--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,11 +45,10 @@ stages:
        npm ci test
       displayName: 'Run Unit Tests'
       workingDirectory: $(System.DefaultWorkingDirectory)/
+
+    - script: npm run build 
+      displayName: 'Build Next.js application'
     
-    - script: |
-       npm run build 
-      displayName:  'build apps'
-      workingDirectory: $(System.DefaultWorkingDirectory)/
     
     
     - task: PublishBuildArtifacts@1
