--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,9 +46,11 @@ stages:
       displayName: 'Run Unit Tests'
       workingDirectory: $(System.DefaultWorkingDirectory)/
     
-    - script: npm run build
-      displayName: 'npm build apps'
-      workingDirectory: $(System.DefaultWorkingDirectory)/
+    - task: Npm@1
+      inputs:
+       workingDir: 'src/app'
+      displayName: 'npm run build apps'
+      
     
     - task: PublishBuildArtifacts@1
       displayName: Publish artifacts
