--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,19 +46,23 @@ stages:
       displayName: 'Run Unit Tests'
       workingDirectory: $(System.DefaultWorkingDirectory)/
     
-    - task: Npm@1
-      inputs:
-       workingDir: 'src/app'
-      displayName: 'npm run build apps'
+    - script: |
+        npm run build
+      displayName: 'npm build'      
     
-
-    - task: PublishBuildArtifacts@1
-      displayName: 'Download Build Artifacts'
+    - task: CopyFiles@2
       inputs:
-       PathtoPublish: $(Build.ArtifactStagingDirectory)'
-       ArtifactName: 'drop'
-       publishLocation: Container
+        sourceFolder: '$(Build.SourcesDirectory)'
+        contents: |
+            src/*
+            public/*
+        targetFolder: '$(Build.ArtifactStagingDirectory)'
+      displayName: 'Copy project files'
 
+    - task: PublishPipelineArtifact@1
+      inputs:
+        artifactName: 'www'
+        targetPath: '$(Build.ArtifactStagingDirectory)'        
     
  # Step 2 integrate security scans into the CI/CD pipeline.
   - job:
