Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,6 +49,8 @@ stages:
     - script: |
         npm run build
       displayName: 'npm build'      
+      workingDirectory: 'src/app'
+      
     
     - task: CopyFiles@2
       inputs:
