--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -104,7 +104,20 @@ stages:
                echo "Deploying to Test Environment"
              # Add deployment scripts/commands here (e.g., ARM templates, Kubernetes manifests)
             displayName: 'Deploy Application'
-        
+          # Stop the VirtualBox VM
+          
+          - script: |
+               echo "Stopping VirtualBox VM..."
+                VBoxManage controlvm "olu-VirtualBox" acpipowerbutton
+            displayName: "Stop VirtualBox VM"
+
+          - script: |
+             echo "Deploying application to VirtualBox VM..."
+             # Replace the following with your specific paths and commands
+                 scp -r ./path/to/your/package olu@192.168.1.75:/var/www/
+                 ssh olu@192.168.1.75 'sudo systemctl restart apache2'  # Or the service your app uses
+            displayName: "Deploy to VirtualBox VM" 
+
             
 
           - task: PublishTestResults@2
