Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -105,28 +105,28 @@ stages:
              # Add deployment scripts/commands here (e.g., ARM templates, Kubernetes manifests)
             displayName: 'Deploy Application'
           
-          - task: AzureAppServiceManage@0
-            inputs:
-              azureSubscription:  
-              Action: Stop Azure App Service
-              WebAppName: 
+         # - task: AzureAppServiceManage@0
+          #  inputs:
+         #     azureSubscription:  ''
+          #    Action: Stop Azure App Service
+          #    WebAppName: ''
           
-          - task: AzureRmWebAppDeployment@4
-            displayName: 'Deploy to Test'
-            inputs:
-              ConnectionType:  AzureRM
-              azureSubscription: ''
-              appType: 'webApp'
-              WebAppName: 
-              packageForLinux: 
+         # - task: AzureRmWebAppDeployment@4
+        #    displayName: 'Deploy to Test'
+         #   inputs:
+          #    ConnectionType:  AzureRM
+         #     azureSubscription: ''
+          #    appType: 'webApp'
+          #    WebAppName: ''
+          #    packageForLinux: ''
           
-          - task: PublishTestResults@2
-            displayName: Publish Test result
-            inputs:
-              testResultsFormat: 'JUnit'
-              testResultsFiles: '**/TEST-*.xml'
-              #searchFolder: '$(System.DefaultWorkingDirectory)'
-              searchFolder: 'src/app'
+       #   - task: PublishTestResults@2
+        #    displayName: Publish Test result
+        #    inputs:
+        #      testResultsFormat: 'JUnit'
+         #     testResultsFiles: '**/TEST-*.xml'
+            #  #searchFolder: '$(System.DefaultWorkingDirectory)'
+           #   searchFolder: 'src/app'
           
             
 - stage: Staging
