Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ stages:
       inputs:
        workingDir: 'src/app'
        command: custom
-       customCommand: 'run ci test'
+       customCommand: 'run test-ci'
    
       
 
