--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,9 @@ stages:
         npm config set fund false --location=global
         set cache .npm
         npm audit fix 
+    - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
+      displayName: 'Write build info'
+      workingDirectory: 'src/app'
 
 
     - task: Npm@1
@@ -58,8 +61,8 @@ stages:
       inputs:
        workingDir: 'src/app'
        command: custom
-       customCommand: 'run test:ci'
-   
+       customCommand: 'npm ci && npm test'
+ 
       
 
 
