--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -117,7 +117,7 @@ stages:
               ConnectionType:  AzureRM
               azureSubscription: 'kgf-serviceconnect-01'
               appType: 'webApp'
-              WebAppName: kgf-webapp
+              WebAppName: kgfwindows
               packageForLinux: '$(Build.ArtifactStagingDirectory)'
               
           - task: AzureAppServiceManage@0
@@ -125,7 +125,7 @@ stages:
             inputs:
               azureSubscription: 'kgf-serviceconnect-01'
               Action: Start Azure App Service
-              WebAppName: kgf-webapp
+              WebAppName: kgfwindows
           
           
           
