--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -125,7 +125,7 @@ stages:
             inputs:
               azureSubscription: 'kgfwindows'
               Action: Start Azure App Service
-              WebAppName: kgfwindows
+              WebAppName: kgfwebOS
           
           
           
