--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -119,7 +119,7 @@ stages:
               azureSubscription: 'kgfwindows'
               appType: 'webApp'
               WebAppName: kgfwebOS
-              packageForLinux: '$(Pipeline.Workspace)\drop\'
+              packageForLinux: '$(Pipeline.Workspace)/'
               
           - task: AzureAppServiceManage@0
             displayName: 'dev-kgf-01 Start'
